--- a/0x1A-application_server/gunicorn.service
+++ b/0x1A-application_server/gunicorn.service
@@ -1,13 +1,13 @@
-[Unit]
-Description=Gunicorn instance to serve Airbnb application
-After=network.target
+[Unit]                                                                     
+Description=Gunicorn instance to serve application                                                                                    
+After=network.target                                                                                                                  
 
 [Service]
 User=ubuntu
 Group=ubuntu
-WorkingDirectory=/home/ubuntu/AirBnB_clone_v3
-ExecStart=/usr/bin/gunicorn --workers 3 --bind 0.0.0.0:5003 api.v1.app:app --access-logfile /tmp/airbnb-access.log --error-logfile /tmp/airbnb-error.log
-Restart=always
+WorkingDirectory = /home/ubuntu/AirBnB_clone_v4
+ExecStart=/home/ubuntu/.local/bin/gunicorn -w 3 -b :5003 -t 90 --access-logfile /home/ubuntu/AirBnB_clone_v4/logs/airbnb-access.log --error-logfile /home/ubuntu/AirBnB_clone_v4/logs/airbnb-error.log web_dynamic.2-hbnb:app
+PrivateTmp=false
 
 [Install]
 WantedBy=multi-user.target
